--- a/ASC.Web/appsettings.json
+++ b/ASC.Web/appsettings.json
@@ -1,9 +1,25 @@
 ﻿{
   "AppSettings": {
-    "ApplicationTitle": "Automobile Service Center Application"
+    "ApplicationTitle": "Automobile Service Center Application",
+    "AdminEmail": "asc.superuser@gmail.com",
+    "AdminName": "Admin",
+    "AdminPassword": "P@ssw0rd",
+    "Roles": "Admin,User",
+
+    "SMTPServer": "smtp.gmail.com",
+    "SMTPPort": "587",
+    "SMTPAccount": "autoservicenternew@gmail.com",
+    "SMTPPassword": "P@ssw0rd!@#"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ASC.Web-487FFB44-A3A8-4667-86B4-30002F7B0B4F;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "IdentityAzureTable": {
+    "IdentityConfiguration": {
+      "TablePrefix": "ASC",
+      "StorageConnectionString": "UseDevelopmentStorage=true;",
+      "LocationMode": "PrimaryOnly"
+    }
   },
   "Logging": {
     "IncludeScopes": false,
