--- a/ASC.Web/appsettings.Template.json
+++ b/ASC.Web/appsettings.Template.json
@@ -1,15 +1,18 @@
 ﻿{
   "AppSettings": {
     "ApplicationTitle": "Automobile Service Center Application",
-    "AdminEmail": "xxx@yyy.zzz",
+    "AdminEmail": "asc.superuser@gmail.com",
     "AdminName": "Admin",
-    "AdminPassword": "XXX",
-    "Roles": "Admin,User",
+    "AdminPassword": "P@ssw0rd",
+    "EngineerEmail": "asc.superengineer@gmail.com",
+    "EngineerName": "Engineer",
+    "EngineerPassword": "P@ssw0rd",
+    "Roles": "Admin,User,Engineer",
 
     "SMTPServer": "smtp.gmail.com",
     "SMTPPort": "587",
-    "SMTPAccount": "xxx@yyy.zzz",
-    "SMTPPassword": "XXX"
+    "SMTPAccount": "autoservicenternew@gmail.com",
+    "SMTPPassword": "P@ssw0rd!@#"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ASC.Web-487FFB44-A3A8-4667-86B4-30002F7B0B4F;Trusted_Connection=True;MultipleActiveResultSets=true"
