End of chapter 6

--- a/ASC.Web/appsettings.Template.json
+++ b/ASC.Web/appsettings.Template.json
@@ -14,6 +14,12 @@
     "SMTPAccount": "autoservicenternew@gmail.com",
     "SMTPPassword": "P@ssw0rd!@#"
   },
+  "Google": {
+    "Identity": {
+      "ClientId": "************-********************************.apps.googleusercontent.com",
+      "ClientSecret": "************************"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ASC.Web-487FFB44-A3A8-4667-86B4-30002F7B0B4F;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
