--- a/ASC.Web/appsettings.Template.json
+++ b/ASC.Web/appsettings.Template.json
@@ -30,6 +30,10 @@
       "LocationMode": "PrimaryOnly"
     }
   },
+  "CacheSettings": {
+    "CacheConnectionString": "localhost",
+    "CacheInstance": "ASCInstance"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
