--- a/ASC.Web/bundleconfig.json
+++ b/ASC.Web/bundleconfig.json
@@ -5,20 +5,42 @@
     "outputFileName": "wwwroot/css/site.min.css",
     // An array of relative input file paths. Globbing patterns supported
     "inputFiles": [
-      "wwwroot/css/site.css"
+      "wwwroot/css/jquery.dataTables.css",
+      "wwwroot/css/materialize.css",
+      "wwwroot/css/style.css"
     ]
   },
   {
-    "outputFileName": "wwwroot/js/site.min.js",
+    "outputFileName": "wwwroot/js/jqueryBundle.min.js",
     "inputFiles": [
-      "wwwroot/js/site.js"
+      "wwwroot/lib/jquery/dist/jquery.js",
+      "wwwroot/lib/jquery-validation/dist/jquery.validate.js",
+      "wwwroot/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"
     ],
     // Optionally specify minification options
     "minify": {
-      "enabled": true,
-      "renameLocals": true
-    },
-    // Optionally generate .map file
-    "sourceMap": false
+      "enabled": true
+    }
+  },
+  {
+    "outputFileName": "wwwroot/js/libraryBundle.min.js",
+    "inputFiles": [
+      "wwwroot/js/materialize.min.js",
+      "wwwroot/js/jquery.dataTables.js"
+    ],
+    // Optionally specify minification options
+    "minify": {
+      "enabled": true
+    }
+  },
+  {
+    "outputFileName": "wwwroot/js/appBundle.min.js",
+    "inputFiles": [
+      "wwwroot/js/init.js"
+    ],
+    // Optionally specify minification options
+    "minify": {
+      "enabled": true
+    }
   }
 ]
