End of chapter 11

--- a/ASC.Web/appsettings.Template.json
+++ b/ASC.Web/appsettings.Template.json
@@ -12,7 +12,11 @@
     "SMTPServer": "smtp.gmail.com",
     "SMTPPort": "587",
     "SMTPAccount": "autoservicenternew@gmail.com",
-    "SMTPPassword": "P@ssw0rd!@#"
+    "SMTPPassword": "P@ssw0rd!@#",
+
+    "TwilioAccountSID": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+    "TwilioAuthToken": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+    "TwilioPhoneNumber": "+XXXXXXXXXXX"
   },
   "Google": {
     "Identity": {
