--- a/ASC.Web/ASC.Web.csproj
+++ b/ASC.Web/ASC.Web.csproj
@@ -75,9 +75,9 @@
     </EmbeddedResource>
   </ItemGroup>
 
-  <!--<Target Name="PreBuildScript" BeforeTargets="Build">
+  <Target Name="PreBuildScript" BeforeTargets="Build">
     <Exec Command="dotnet bundle clean" />
     <Exec Command="dotnet bundle" />
-  </Target>-->
+  </Target>
 
 </Project>
